versioned_docs/version-5.0.0/index.mdx
---
sidebar_position: 1
title: TIS介绍
linktitle: 基于DataX和Flink-CDC的DataOps数据同步中台TIS
type: book
icon_pack: fas
icon: flag-checkered
date: 2021-03-30
---


import Figure from '/src/components/Figure';
import SourceSinkTable from './plugin/source-sink-table'
import Contact from '@site/src/components/Contact';
import Link from '/src/components/Link';

>过去，数据集成是开发者用代码搭建的"高墙"。如今TIS用一键式操作打破壁垒——DBA、分析师等技术/业务人员无需编程，通过可视化配置即可完成数据抽取、清洗、同步等全流程。现在整个团队都能像组装乐高一样零代码搭建数据管道！

## 实时ETL数仓

TIS为您提供企业级数据集成服务，**基于批(DataX)，流(Flink-CDC、Chunjun)一体，提供简单易用的操作界面，降低用户实施端到端数据同步的实施门槛，缩短任务配置时间，避免配置过程中出错，使数据同步变得简单、有趣且容易上手** [详细介绍](https://tis.pub/docs/)

如果您正在利用DataX、Flink-CDC、SeaTunnel编写脚本来驱动执行端到端数据同步程序，是非常烦冗且容易出错的事儿。

并因此感到些许厌倦，您可以尝试一下TIS，一定会给您带来不小的惊喜。

![tis](/img/execute_model_batch_incr.jpg)

## 视频示例


* [启用分布式执行功能](https://www.bilibili.com/video/BV1Cq4y1D7z4?share_source=copy_web)
* [MySQL导入ElasticSearch](https://www.bilibili.com/video/BV1G64y1B7wm?share_source=copy_web)
* [MySQL导入Hive](https://www.bilibili.com/video/BV1Vb4y1z7DN?share_source=copy_web)
* [MySQL导入Clickhouse](https://www.bilibili.com/video/BV1x64y1B7V8/)
* [MySQL全表入湖Hudi](./example/mysql-hudi.mdx) [>>视频Demo](https://www.bilibili.com/video/BV1FF411L7Wh/?zw&vd_source=fb348e27d4839f46057045d150b06dce)
* [MySQL到StarRocks的同步实现](./example/mysql-sync-starrocks.mdx) [>>视频Demo](https://www.bilibili.com/video/BV1Ah411x7J8/?zw&vd_source=fb348e27d4839f46057045d150b06dce)
* MySQL同步Doris [>批量同步](https://www.bilibili.com/video/BV1eh4y1o7yQ) [>实时同步](https://www.bilibili.com/video/BV1nX4y1h7SW)
## TIS安装

* [安装指南](./install/tis/uber)
* [安装示例](https://www.bilibili.com/video/BV18q4y1p73B/)

## <i class="fa fa-eercast" aria-hidden="true"></i>TIS支持的端类型

<SourceSinkTable />

## 功能特性

* **安装简单**

  TIS的安装还是和传统软件安装一样，只需要三个步骤：一、下载tar包，二、解压tar包，三、启动TIS。是的，就这么简单。
  
  另外还支持多种部署模式（Docker、Docker-Compose、Kubernetes）。

* **扩展性强**

  TIS 继承了Jenkin 的设计思想，使用微前端技术，重新构建了一套前端框架，前端页面可以自动渲染。

  TIS 提供了良好的扩展性和SPI机制，开发者可以很轻松地开发新的插件。

* **支持各种Transformer算子功能**

  通过在TIS流程中设置Transformer功能逻辑，可实现在ETL数仓功能中，在E（数据抽取）阶段即可高效实现各种字段值转换功能，如：字段脱敏，字段拼接，取子字符串等功能。<Link href={require("@site/docs/guide/transformer/index.mdx")} >详细说明</Link>

* **易与大数据生态整合**

  支持与DolphinScheduler整合，用户只需在TIS中配置数据管道，验证无误后，一键推送同步表任务到DolphinScheduler平台，即可在其上完成数据同步任务调度。为以DolphinScheduler构建ETL数仓方案如虎添翼。<Link href={require("@site/docs/install/integer-dolphinscheduler/index.mdx")} >详细说明</Link>

* **基于 DataOps 理念**

  借鉴了 DataOps、DataPipeline 理念，对各各执行流程建模。不需要了解底层模块的实现原理，基本实现傻瓜化方式操作。

## 功能一览

支持 Pipeline AI Agent 创建数据管道

<Figure img={require('./guide/pipeline-ai-agent/tis5_0_0_1.png')} />

选择Reader/Writer插件类型

<Figure img={require('./enhance-extra/datax-add-step2.png')} />

### 开通批量数据通道

添加MySqlReader

<Figure img={require('./enhance-extra/add-mysql-reader.png')} />

设置MySqlReader目标表、列

<Figure img={require('./enhance-extra/select-tab-cols.png')} />

添加ElasticWriter,可视化设置ElasticSearch的Schema Mapping

<Figure img={require('./enhance-extra/add-elastic-writer.png')} />

执行MySql->ElasticSearch DataX实例，运行状态

<Figure img={require('./enhance-extra/datax-exec-status.png')} />

执行MySql->ElasticSearch 执行成功

<Figure img={require('./enhance-extra/datax-exec-success.png')} />

### 开通实时数据通道

添加Flink-Cluster、设置重启策略、CheckPoint机制等

<Figure img={require('./enhance-extra/incr_step_1.png')} />

设置Source/Sink组件属性
<Figure img={require('./enhance-extra/incr_step_2.png')} />

TIS基于数据库元数据信息自动生成Flink-SQL脚本,您没看错全部脚本自动生！
<Figure img={require('./enhance-extra/incr_step_3.png')} />

实时数据通道创建完成！控制台实时显示流量，可以执行限流，启停（Pause/Resume）等操作 <Link href={require("./guide/rate-controller/index.mdx")}  >>>详细</Link>

**构建一个实时整库同步管道就这么简单！！！**

<Figure img={require('./enhance-extra/realtime_metric_show.gif')} />


<Contact/>
